[tool.poetry]
name = "Your Vanity Domains"
version = "0.1.0"
description = ""
authors = ["Hamish Currie <hamish@currie.com.au>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
Flask-Cors = "^3.0.10"
Flask-HTTPAuth = "^4.5.0"
Werkzeug = "^2.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
